# SONBIN

./: .gitignore  .prettierignore  Cargo.toml  eslint.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: backend.yaml  frontend.yaml
backend/bingo/: Cargo.toml
backend/bingo/src/: board.rs  generate.rs  judge.rs  lib.rs  matrix.rs
backend/board/: Cargo.toml
backend/board/src/: board.rs  generate.rs  judge.rs  matrix.rs
backend/game/: Cargo.toml
backend/game/src/: config.rs  errors.rs  game.rs  lib.rs  manager.rs
backend/oauth/: Cargo.toml
backend/oauth/src/: error.rs  lib.rs
backend/oauth/src/security/: memory.rs  mod.rs  redis.rs
backend/server/: Cargo.toml
backend/server/src/: error.rs  main.rs
backend/server/src/routes/: mod.rs
backend/server/src/routes/game/: create.rs  mod.rs
backend/server/src/routes/login/: authenticate.rs  mod.rs
frontend/: app.tsx  index.html  main.tsx  routes.tsx
frontend/pages/home/: index.tsx
