[workspace]
resolver = "2"
members = ["backend/board", "backend/game", "backend/oauth", "backend/server"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
board = { path = "backend/board" }
game = { path = "backend/game" }
oauth = { path = "backend/oauth" }

log = "0.4.22"
rand = "0.8.5"
redis = { version = "0.27.0", features = ["aio", "r2d2", "ahash", "tokio-comp", "connection-manager","sentinel"] }
serde = { version = "1.0.210", features = ["derive"] }
serenity = { version = "0.12.2", default-features = false }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "rt"] }
