[package]
name = "oauth"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
rand.workspace = true
redis.workspace = true
serde.workspace = true
serenity.workspace = true
thiserror.workspace = true

base64 = "0.22.1"
digest = "0.10.7"
reqwest = { version = "0.12.7", features = ["rustls-tls-native-roots", "multipart", "json"] }
sha2 = "0.10.8"
url = "2.5.2"
