[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
log.workspace = true
oauth.workspace = true
redis.workspace = true
serde.workspace = true

axum = { version = "0.7.5", features = ["ws"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "rt"] }
tracing-subscriber = "0.3.18"
