[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
board.workspace = true
game.workspace = true
oauth.workspace = true

log.workspace = true
redis.workspace = true
serde.workspace = true
serenity.workspace = true
tokio.workspace = true

axum = { version = "0.7.5", features = ["ws"] }
tracing-subscriber = "0.3.18"
